# prevertical2text

./: .gitmodules  CMakeLists.txt  README.md  prevertical2text_main.cc
src/: CMakeLists.txt  bilangwriter.cc  bilangwriter.hh  html.cc  html.hh  preverticalpreprocessor.cc  preverticalpreprocessor.hh  xh_scanner.hh
